--- a/mp3vis.html
+++ b/mp3vis.html
@@ -17,9 +17,16 @@
 
 <body>
 	<p>hello
-	<div id="dropbox" style="background: #ccc">drag here</div>
+	<div id="dropbox" style="background: #ccc; color:#000; padding: 0px 2em">
+		drag here
+		<p id="info">info shown here</p>
+	</div>
 	<script src="mp3vis.js"></script>
 	<script>
+		async function parse(ab) {
+			const { frames, maindatas } = await Mp3vis.parsefile(ab);
+			document.getElementById("info").innerText = `${frames.length} / ${maindatas.length}`;
+		}
 		const it = document.getElementById("dropbox");
 		it.addEventListener("dragover", (e) => {
 			e.preventDefault();
@@ -28,12 +35,12 @@
 			e.preventDefault();
 			const file = e.dataTransfer?.files?.[0];
 			if (file) {
-				file.arrayBuffer().then(Mp3vis.parsefile);
+				file.arrayBuffer().then(parse);
 			}
 		});
 		fetch("ah.mp3").then((r) => {
 			if (r.ok) {
-				r.arrayBuffer().then(Mp3vis.parsefile);
+				r.arrayBuffer().then(parse);
 			}
 		});
 	</script>
