--- a/mp3vis.html
+++ b/mp3vis.html
@@ -17,10 +17,10 @@
 
 <body>
 	<p>hello
-	<div id="dropbox" style="background: #ccc; color:#000; padding: 0px 2em">
+	<div id="dropbox" style="background: #ccc; color:#000; padding: 0px 2em;">
 		drag here
 		<p id="info">info shown here</p>
-		<canvas id="wavescope"></canvas>
+		<canvas id="wavescope" style="width: 100%; height: 100px;"></canvas>
 	</div>
 	<script src="mp3vis.js"></script>
 	<script>
@@ -29,10 +29,26 @@
 			document.getElementById("info").innerText = `${frames.length} / ${maindatas.length}`;
 			const canvas = document.getElementById("wavescope");
 			const ctx = canvas.getContext("2d");
-			canvas.width = soundframes.length * soundframes[0][0].length;
+			const samples = [0, 1].map(ch => soundframes.flatMap(sf => sf[ch]));
+			const samp0 = samples[0];
+			const samplen = samp0.length
+			canvas.width = samplen;
 			canvas.height = 100;
 			ctx.fillStyle = "#222";
 			ctx.fillRect(0, 0, canvas.width, canvas.height);
+			ctx.strokeStyle = "#cfc";
+			// for (let i = 0; i < samplen - 1; i++) {
+			// 	ctx.beginPath();
+			// 	ctx.moveTo(i, samp0[i] * 50 + 50);
+			// 	ctx.lineTo(i + 1, samp0[i + 1] * 50 + 50);
+			// 	ctx.stroke();
+			// }
+			ctx.beginPath();
+			ctx.moveTo(0, samp0[0] * 50 + 50);
+			samp0.forEach((v, i) => {
+				ctx.lineTo(i, v * 50 + 50)
+			});
+			ctx.stroke();
 		}
 		const it = document.getElementById("dropbox");
 		it.addEventListener("dragover", (e) => {
