--- a/mp3vis.html
+++ b/mp3vis.html
@@ -23,11 +23,12 @@
 		<canvas id="wavescope" style="width: 100%; height: 100px;"></canvas>
 		<p><a id="dlsample">download raw sample</a></p>
 		<p><a id="playsample">play sample</a></p>
+		<p id="internals" style="overflow: hidden; height: 3.5em;"></p>
 	</div>
 	<script src="mp3vis.js"></script>
 	<script>
 		async function parse(ab) {
-			const { frames, maindatas, soundframes } = await Mp3vis.parsefile(ab);
+			const { frames, maindatas, soundframes, internals } = await Mp3vis.parsefile(ab);
 
 			document.getElementById("info").innerText = `${frames.length} / ${maindatas.length}`;
 
@@ -72,6 +73,16 @@
 				src.buffer = buf;
 				src.connect(ctx.destination);
 				src.start();
+			};
+
+			const internals_box = document.getElementById("internals");
+			internals_box.innerText = internals.map(e => JSON.stringify(e) + "\n").join("");
+			internals_box.onclick = function () {
+				const selection = getSelection();
+				selection.removeAllRanges();
+				const range = document.createRange();
+				range.selectNodeContents(internals_box);
+				selection.addRange(range);
 			};
 		}
 		const it = document.getElementById("dropbox");
