temp. disable sample load

--- a/mp3vis.html
+++ b/mp3vis.html
@@ -98,11 +98,11 @@
 				file.arrayBuffer().then(parse);
 			}
 		});
-		fetch("ah.mp3").then((r) => {
+		/* fetch("ah.mp3").then((r) => {
 			if (r.ok) {
 				r.arrayBuffer().then(parse);
 			}
-		});
+		}); */
 	</script>
 </body>
 
