--- a/mp3vis.html
+++ b/mp3vis.html
@@ -30,9 +30,14 @@
 	<script>
 		async function parse(ab) {
 			const bandmask = Array(32).fill(0).map((_, i) => document.getElementById(`bandmask${i}`).checked);
-			const { frames, maindatas, soundframes, internals } = await Mp3vis.parsefile(ab, bandmask);
+			const { frames, maindatas, soundframes, internals } = await Mp3vis.parsefile(ab, async (iter) => {
+				document.getElementById("info").innerText = `${iter.i}`;
+				await new Promise(r => setTimeout(r, 0));
+			}, bandmask);
 
 			document.getElementById("info").innerText = `${frames.length} / ${maindatas.length}`;
+
+			await new Promise(r => setTimeout(r, 0));
 
 			const samples = Array(soundframes[0].length).fill(0).map((_, ch) => soundframes.flatMap(sf => sf[ch]));
 
